--- a/src/app/dashboard/prxtime/mssal/mssal.component.html
+++ b/src/app/dashboard/prxtime/mssal/mssal.component.html
@@ -17,10 +17,10 @@
       </mat-form-field>
       <mat-slide-toggle name="toRemove" (change)="onToRemoveChange($event)">To remove hours</mat-slide-toggle>
       <div class="flex shadow-md" *ngIf="showCalculation">
-        <div class="flex w-1/4 rounded-l-sm items-center p-2 px-4 bg-indigo-300">
+        <div class="flex items-center w-1/4 p-2 px-4 bg-indigo-300 rounded-l-sm">
           <span class="font-bold">MSSAL</span>
         </div>
-        <div class="flex w-3/4 rounded-r-sm items-center p-2 px-4 bg-indigo-200">
+        <div class="flex items-center w-3/4 p-2 px-4 bg-indigo-200 rounded-r-sm">
           {{this.newMSSAL | timeTransformPipe}}
         </div>
       </div>
