--- a/src/app/dashboard/prxtime/worked-time/worked-time.component.html
+++ b/src/app/dashboard/prxtime/worked-time/worked-time.component.html
@@ -23,10 +23,10 @@
       </mat-form-field>
       <mat-slide-toggle name="addToMssal" (change)="onAddToMssalChange($event)">Add to MSSAL</mat-slide-toggle>
       <div class="flex shadow-md" *ngIf="workedTime !== undefined">
-        <div class="flex w-1/4 rounded-l-sm items-center p-2 px-4 bg-indigo-300">
+        <div class="flex items-center w-1/4 p-2 px-4 bg-indigo-300 rounded-l-sm">
           <span class="font-bold">Worked time</span>
         </div>
-        <div class="flex w-3/4 rounded-r-sm items-center p-2 px-4 bg-indigo-200">
+        <div class="flex items-center w-3/4 p-2 px-4 bg-indigo-200 rounded-r-sm">
           {{workedTime | timeTransformPipe}}
         </div>
       </div>
